--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,16 @@ a:hover {
   padding: 0.5rem 0.7rem;
   border-radius: 0.3rem;
 }
+
+/* Rodapé */
+
+#footer {
+  border-top: 2px solid #ddd;
+  padding: 3rem;
+  text-align: center;
+}
+
+#footer h2,
+#footer p {
+  margin-bottom: 1rem;
+}
