--- a/css/style.css
+++ b/css/style.css
@@ -143,3 +143,11 @@ a:hover {
 #footer p {
   margin-bottom: 1rem;
 }
+
+/* Responsividade */
+
+@media (max-width: 450px) {
+  .container {
+    flex-wrap: wrap;
+  }
+}
